2004-08-02  Andrew Cagney  <cagney@gnu.org>

	* regcache.c (legacy_read_register_gen, real_register) 
	(legacy_write_register_gen): Delete, not used.

	* regcache.c (struct regcache_descr): Delete legacy_p.
	(init_legacy_regcache_descr): Delete function.
	(init_regcache_descr): Delete call to init_legacy_regcache_descr.
	Do not use deprecated register functions.
	(regcache_raw_read, deprecated_write_register_gen):
	(deprecated_read_register_gen, regcache_raw_write): Delete code
	predicated on legacy_p.
	(register_size): Delete check against register raw size.

	* cris-tdep.c (cris_register_type): Replace
	cris_register_virtual_type.
	(cris_gdbarch_init): Update, set register_type.

	* gdbarch.sh (deprecated_frameless_function_invocation): Delete.
	* gdbarch.h, gdbarch.c: Re-generate.
	* arm-tdep.c 	(arm_frameless_function_invocation): Delete.
	(arm_gdbarch_init) Do not set frameless function invocation.
	* frame.h (legacy_frameless_look_for_prologue): Delete declaration.
	* blockframe.c (legacy_frameless_look_for_prologue): Delete function.
	* frv-tdep.c (frv_frameless_function_invocation): Delete.
	(frv_gdbarch_init): Do not set frameless function invocation.
	* sh64-tdep.c (sh64_gdbarch_init): Ditto.
	* sh-tdep.c (sh_gdbarch_init): Ditto.
	* m32r-tdep.c (m32r_gdbarch_init): Ditto.
	* h8300-tdep.c (h8300_gdbarch_init): Ditto.
	* avr-tdep.c (avr_gdbarch_init): Ditto.

	* blockframe.c (legacy_frame_chain_valid): Delete function.

	* dummy-frame.c (struct dummy_frame): Delete call_lo, call_hi, top
	and pc.  Update comments.
	(pc_in_dummy_frame): Delete function.
	(deprecated_pc_in_call_dummy): Inline old pc_in_dummy_frame code,
	use the "id".
	(dummy_frame_push, dummy_frame_sniffer): Instead of call_lo,
	call_hi, top and pc, use the id.
	(fprint_dummy_frames): Do not print call_lo, call_hi, top and pc.

	* dummy-frame.c: Include "gdb_string.h".
	(generic_save_call_dummy_addr, generic_push_dummy_frame)
	(generic_save_dummy_frame_tos): Delete.